# inzpektor-contracts

./: Cargo.toml  Makefile
circuits/: README.md
contracts/inzpektor-handler/: inzpektor_id_nft.wasm  ultrahonk_zk.wasm
contracts/inzpektor-handler/src/: lib.rs  test.rs
contracts/inzpektor-handler/test_snapshots/test/: test_get_nft_balance.1.json  test_get_nft_expiration.1.json  test_get_nft_metadata.1.json  test_getters.1.json  test_mint_inzpektor_id.1.json
contracts/inzpektor-id-nft/: Cargo.toml
contracts/inzpektor-id-nft/src/: contract.rs  test.rs
contracts/inzpektor-id-nft/test_snapshots/test/: initial_state.1.json  test_expired_token.1.json  test_mint.1.json  test_mint_with_expiration.1.json
contracts/ultrahonk-zk/: Cargo.toml
