[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "23"
stellar-tokens = "=0.5.0"
stellar-access = "=0.5.0"
stellar-contract-utils = "=0.5.0"
stellar-macros = "=0.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
